--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     viewBinding {
         enabled = true
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -56,6 +59,7 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.2.0")
 
     implementation 'org.glassfish:javax.annotation:10.0-b28'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     // Lottie
     def lottieVersion = "3.4.0"
@@ -73,7 +77,7 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.3"
 
     //kotlin coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
     //Hilt for dependency
@@ -87,7 +91,14 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
-    implementation "com.google.android.gms:play-services-location:15.0.1"
+    // FusedLocation
+    implementation "com.google.android.gms:play-services-location:21.0.1"
+
+    // MapBox
+    implementation 'com.mapbox.maps:android:10.10.0'
+    implementation ('com.mapbox.maps:android:10.10.0'){
+        exclude group: 'group_name', module: 'module_name'
+    }
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
