--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup"
         tools:targetApi="31">
-
+        <activity
+            android:name=".view.main.fragment.message.ChatActivity"
+            android:exported="false" />
         <activity
             android:name=".view.main.fragment.ConcertDetailActivity"
             android:exported="false">
