--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
+            android:name=".view.main.fragment.ListPersonAccountActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.main.fragment.message.ChatActivity"
             android:exported="false" />
         <activity
